# py-cask

./: .gitignore  README.md  pyproject.toml
cask/: __init__.py  cli.py  core.py
docs/: cli.md  core.md
example_app/: main.py
example_app/static/: script.js
example_app/templates/: home.html
static/: style.css
templates/: about.html
