[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cask"
version = "0.1.0"
description = "A minimalistic Flask app packager"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "pywebview",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cask*"]